syntax = "proto3";

package protocol_common_self;

// The origin/destination of the packet.
enum PacketOriginDest {
    ANDROID = 0; // Stock or Rooted Stock Android.
    CODI_OS = 1; // CoDiOS firmware.
    GEMIAN = 2; // Gemian Linux.
    LINEAGE = 3; // LineageOS custom Android ROM.
    PM_OS = 4; // postmarketOS ROM.
    SAILFISH = 5; // Sailfish ROM.
    UBPORTS = 6; // UBPorts ROM.
}

// Holder for metadata of each packet.
message Self {
    PacketOriginDest packetOrigin = 1; // The origin the packet is going.
    PacketOriginDest packetDestination = 2; // The destination the serial packet is coming from.
}
